# GilP

./: .gitignore  CMakeLists.txt  conanfile.py  conanfile.txt  utils.cxx  utils.hxx
src/: GilP.cxx  app.cxx
